# robot-gait-vis

./: LICENSE  README.md  example.py  pyproject.toml
robot_gait_vis/: __init__.py  gait_gen.py  gaits.py  leg.py  planar_leg.py  robot.py  sideways_planar_leg.py  simulate.py  three_dof_leg.py
tests/: test_gait_gen.py  test_gaits.py  test_planar_leg.py  test_robot.py  test_sideways_planar_leg.py  test_simulate.py  test_three_dof_lef.py
