[tool.poetry]
name = "robot-gait-vis"
version = "0.1.2"
description = "Simulate and visualize different walking robot configurations and gaits."
authors = ["Zach Silberstein <zach.silberstein@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/zsilberstein/robot-gait-vis"
keywords = ["robotics", "gait", "visualize"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Visualization"
]
include = [
    "LICENSE"
]


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
